tests/mut_func_arg_dup_binding.test
let f = fun (a, a) -> a;
####
SyntaxError: Repeated variable binding in pattern
let f = fun (a, a) -> a;
                ^        
Note: Name was already bound here:
let f = fun (a, a) -> a;
             ^
